--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Nanum Myeongjo', serif;
   background-color: black;
@@ -73,26 +77,24 @@ body {
   font-size: 60px;
 }
 
-@media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-
-}
-
 
 /* NAVBAR SECTION */
 
 .myNavbar {
   background-color: rgba(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.5);
+
 }
 
 .brandSub {
   font-size: 9px;
   text-align: center;
+  cursor: default;
 }
 
 .brandSub:hover {
   color: rgb(214, 196, 171);
+  cursor: default;
 }
 .brandLogo {
   font-size: 40px;
@@ -100,23 +102,38 @@ body {
   font-family: 'Rajdhani', sans-serif;
   display: flex;
   justify-content: center;
+  text-align: center;
 }
-.brandLogoText:hover {
-  color: rgb(214, 196, 171);
+
+
+.brandLink {
+  color: white;
+  text-decoration: none;
+}
+.brandLink:hover {
+  color: white;
+  text-decoration: inherit;
 }
 
 .brandLogoText {
   display: inline-block;
-  padding-left: 25px;
-  padding-right: 10px;
+  text-align: center;
   color: white;
   margin-top: 10px;
 }
 
-.brandLogoBurger {
-  display: inline-block;
-  color: white;
+
+
+.burgerBtn {
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
+
+.burgerBtn:hover {
+  color: rgb(214, 196, 171);
+}
+
+
 
 .socialLinks {
   display: flex;
@@ -126,25 +143,31 @@ body {
 
 .btn-instagram:hover {
   transform: scale(1.25);
+  color: white;
 }
 .btn-instagram {
   padding-top: 15px;
   transform: scale(1.2);
+  color: white;
 }
 .btn-facebook:hover {
   transform: scale(1.1);
+  color: white;
 }
 
 .btn-facebook {
   padding-top: 15px;
+  color: white;
 }
 
 .btn-tripadvisor:hover {
   transform: scale(1.2);
+  color: white;
 }
 .btn-tripadvisor {
   padding-top: 15px;
   transform: scale(1.15);
+  color: white;
 }
 
 #elevator {
@@ -165,6 +188,7 @@ body {
 
 #floors {
   text-align: left;
+  padding-top: 100px;
 }
 
 .infos-2 {
@@ -177,14 +201,15 @@ body {
 }
 .navBtns {
   margin-top: 10px;
-  margin-left: 20px;
+  margin-left: 15px;
 }
 .navBtns a {
   font-family: 'Rajdhani', sans-serif;
-  padding-top: 28px;
+  padding-top: 0px;
   font-size: 21px;
   color: white;
   padding-right: 20px;
+  margin-left: 20px;
 
 }
 
@@ -205,21 +230,18 @@ body {
   z-index: -10;
 }
 
-@media screen and (max-height: 1024px) {
-  #video-bg {
-    position: relative;
-    top: 50px;
-  }
-  .bar-title {
-    padding-top: 20px;
-  }
+#phone-video {
+  display: none;
 }
 
 @media screen and (max-height: 450px) {
-  #video-bg {
-    position: relative;
-    top: 100px;
+  .liftBtn {
+    margin-left: 30%;
   }
+  #elevator {
+    margin-left: 30%;
+  }
+
 }
 
 /* ABOUT SECTION */
@@ -258,6 +280,10 @@ body {
   margin-bottom: 40px;
 }
 
+.rooftop-p {
+  margin-bottom: 30px;
+}
+
 /* restaurant section */
 
 .restaurant {
@@ -266,7 +292,16 @@ body {
   padding: 20px;
   margin-bottom: 60px;
 }
-
+#carouselResto {
+  margin-top: 20px;
+}
+.brunch {
+  font-size: 18px;
+  margin-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+}
 .resto-p, .rooftop-p, .bar-p {
   font-family: 'Rajdhani', sans-serif;
   padding-left: 20px;
@@ -276,6 +311,7 @@ body {
 .btnCenter {
   display: flex;
   justify-content: center;
+  margin-bottom: 30px;
 }
 .menuResto {
   font-family: 'Rajdhani', sans-serif;
@@ -310,6 +346,7 @@ body {
   background-color: white;
   color: black;
   padding: 30px;
+  padding-bottom: 60px;
 }
 
 .barCenter {
@@ -352,6 +389,16 @@ body {
   text-align: left;
 }
 
+@media screen and (max-height: 450px) {
+  .contact1 {
+    text-align: center;
+  }
+  .contact2 {
+    margin-top: 15px;
+    text-align: center;
+  }
+}
+
 hr {
   width: 50%;
 
@@ -360,6 +407,7 @@ hr {
   background-color: white;
   color: black;
   padding: 30px;
+  padding-bottom: 80px;
 }
 
 .contact-form-2 {
@@ -394,13 +442,15 @@ hr {
   text-align: center;
   background-color: white;
   color: black;
-  padding-bottom: 50px;
+  padding-bottom: 80px;
 }
 
 .reservation {
   display: flex;
   justify-content: center;
   margin-top: 50px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 /* POLICY SECTION */
@@ -409,10 +459,10 @@ hr {
   font-family: 'Rajdhani', sans-serif;
   font-size: 18px;
   color: #ccc;
-  margin: 50px;
+  margin: 40px;
   border: 1px solid white;
-  padding: 40px;
-  box-shadow: 5px 5px 10px #888888;
+  padding: 20px;
+  padding-bottom: 30px;
 }
 .policy-title {
   padding: 40px;
@@ -441,12 +491,11 @@ hr {
 /* PRIVATE HIRE SECTION */
 
 .private-hire {
-
-  margin: 70px;
-  padding: 50px;
+  text-align: center;
   border: 1px solid white;
-  line-height: 1.6;
-  box-shadow: 5px 5px 10px #888888;
+  padding: 40px;
+  margin: 90px;
+  box-shadow: 2px 2px 2px #888888;
 }
 
 .private-p {
@@ -459,7 +508,7 @@ hr {
 footer {
   background-color: white;
   color: black;
-  margin-top: 200px;
+  margin-top: 50px;
   padding-top: 15px;
   padding-bottom: 5px;
   text-align: center;
