--- a/stylesheet.css
+++ b/stylesheet.css
@@ -494,8 +494,8 @@ hr {
   text-align: center;
   border: 1px solid white;
   padding: 10px;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   margin: 15px;
   box-shadow: 2px 2px 2px #888888;
 }
