--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,7 +31,7 @@ body {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1000;
+  z-index: 2000;
   top: 0;
   left: 0;
   background-color: rgb(184, 151, 127);
@@ -237,10 +237,10 @@ body {
 
 @media screen and (max-height: 450px) {
   .liftBtn {
-    margin-left: 20%;
+    margin-left: 60px;
   }
   #elevator {
-    margin-left: 20%;
+    margin-left: 60px;
   }
 
 }
