--- a/stylesheet.css
+++ b/stylesheet.css
@@ -177,12 +177,7 @@ body {
   right: 30px;
   width: 30px;
   margin-bottom: 0px;
-}
-@@media only screen and (max-width: 600px) {
-  .floorsDiv {
-    background-color: blue;
-    padding-left: 30%;
-  }
+
 }
 
 #infos {
@@ -193,8 +188,8 @@ body {
 }
 
 #floors {
-
-  padding-top: 50px;
+  text-align: left;
+  padding-top: 100px;
 }
 
 .infos-2 {
@@ -239,6 +234,7 @@ body {
 #phone-video {
   display: none;
 }
+
 
 
 /* ABOUT SECTION */
