--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,11 @@ body {
   width: 100vw;
 }
 
+
+/* LOADING SCREEN */
+
+
+
 /* Overlay section */
 
 
@@ -16,7 +21,6 @@ body {
   text-decoration: none;
   background: none;
   border: none;
-  font-size: 30px;
   cursor: pointer;
   display: block;
   transition: 0.3s;
@@ -43,39 +47,42 @@ body {
 }
 
 .overlay-content {
-  position: relative;
   width: 100%;
-  padding-top: 50px;
 }
 
 .overlay-content #infos {
+  padding-top: 100px;
   text-align: right;
-  padding-top: 60px;
-  padding-right: 40px;
+  padding-right: 30px;
+  font-size: 2.4vw;
 }
 
 .overlay-content #floors {
-  text-align: left;
-  padding-top: 70px;
-  position: relative;
-  top: 30px;
-  right: 40px;
+  padding-top: 100px;
+  padding-left: 30px;
+  font-size: 2.4vw;
 }
 
+.o-hours {
+  font-weight: 900;
+  font-family: 'Rajdhani', sans-serif;
+  border-top: 1px solid white;
+  padding-top: 10px;
+}
 
 .overlay a {
-  padding: 5px;
   text-decoration: none;
-  font-size: 22px;
-  color: white;
+  border-top: 1px solid white;
+  padding-top: 1px;
+  color: rgb(255, 255, 255);
   display: block;
   transition: 0.3s;
-  font-weight: 700;
+  font-weight: 900;
+  line-height: 2;
 }
 
 .overlay p {
   text-decoration: none;
-  font-size: 20px;
   display: block;
   transition: 0.3s;
 }
@@ -83,26 +90,46 @@ body {
 
 .overlay a:hover, .overlay a:focus {
   color: #f1f1f1;
-  transform: scale(1.15);
+  transform: scale(1.2);
   border-bottom-right-radius: 10px;
-
 }
 
-.overlay .closebtn {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-  font-size: 60px;
-  z-index: 2000;
+.virtual-v {
+  border: 0.5px solid white;
+  display: inline-block;
+  padding: 5px;
+  margin-top: 10px;
+  cursor: pointer;
+  text-align: left;
+}
+
+.virtual-v a {
+  border: none;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.virtual-v a:hover, .virtual-v a:focus {
+  transform: scale(1.08);
+}
+
+.virtual-v i {
+  display: inline;
+}
+
+.virtual-visit {
+  color: white;
 }
 
 
 /* NAVBAR SECTION */
 
+
+
 .myNavbar {
   background-color: rgba(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
+  z-index: 2000;
 
 }
 
@@ -110,12 +137,15 @@ body {
   font-size: 9px;
   text-align: center;
   cursor: default;
+  position: relative;
+  bottom: 5px;
 }
 
 .brandSub:hover {
   color: rgb(214, 196, 171);
   cursor: default;
 }
+
 .brandLogo {
   font-size: 40px;
   cursor: pointer;
@@ -147,7 +177,9 @@ body {
 .burgerBtn {
   margin-left: 20px;
   margin-bottom: 20px;
-  margin-right: 10px;
+  margin-right: 15px;
+  position: relative;
+  top: 5px;
 }
 
 .burgerBtn:hover {
@@ -232,19 +264,12 @@ body {
 
 
 
-.infos-2 {
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-
 .navBtns {
-  margin-top: 10px;
+  margin-bottom: 5px;
   margin-left: 15px;
 }
 .navBtns a {
   font-family: 'Rajdhani', sans-serif;
-
   font-size: 21px;
   color: white;
   padding-right: 20px;
@@ -270,9 +295,7 @@ body {
 #phone-video {
   display: none;
 }
-.liftBtn {
-  margin-left: 40px;
-}
+
 
 
 
@@ -327,6 +350,7 @@ body {
 #carouselResto {
   margin-top: 20px;
   margin-right: 20px;
+  margin-left: 20px;
 }
 .brunch {
   font-size: 18px;
@@ -337,7 +361,7 @@ body {
 }
 .resto-p, .rooftop-p, .bar-p {
   font-family: 'Rajdhani', sans-serif;
-  padding-left: 20px;
+
   font-size: 18px;
 }
 
@@ -427,18 +451,50 @@ body {
 #image-bg {
   display: none;
   position: relative;
-  width: 100%;
+  width: 100vw;
 }
 
 
-
-@media screen (max-width: 768px) {
+@media only screen and (max-width: 768px) {
+  .overlay-content #floors {
+    padding-top: 230px;
+  }
+  .overlay-content #infos {
+    padding-top: 230px;
+  }
   #video-bg {
     display: none;
   }
   #image-bg {
     display:block;
     }
+
+}
+
+@media only screen and (min-width: 600px) {
+  .overlay-content #floors {
+    padding-top: 160px;
+  }
+  .overlay-content #infos {
+    padding-top: 160px;
+  }
+  .virtual-v {
+    font-size: 17px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .overlay-content #infos {
+    font-size: 22px;
+  }
+  .overlay-content #floors {
+    font-size: 25px;
+  }
+
+}
+
+.bookingBtn {
+  margin-left: 20px;
 }
 
 hr {
