--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,11 +10,9 @@ body {
 }
 
 
-/* LOADING SCREEN */
 
 
-
-/* Overlay section */
+/* OVERLAY SECTION */
 
 
 .overlayBtns {
@@ -54,13 +52,13 @@ body {
   padding-top: 100px;
   text-align: right;
   padding-right: 30px;
-  font-size: 2.4vw;
+  font-size: 4vw;
 }
 
 .overlay-content #floors {
   padding-top: 100px;
   padding-left: 30px;
-  font-size: 2.4vw;
+  font-size: 4vw;
 }
 
 .o-hours {
@@ -97,8 +95,7 @@ body {
 .virtual-v {
   border: 0.5px solid white;
   display: inline-block;
-  padding: 5px;
-  margin-top: 10px;
+  padding: 3px;
   cursor: pointer;
   text-align: left;
 }
