--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,8 +9,52 @@ body {
   width: 100vw;
 }
 
+.menu {
+  background-color: rgba(0, 0, 0, 0.0);
+  border: none;
+  cursor: pointer;
+  display: flex;
+  padding: 0;
+  position: absolute;
+  top: 17px;
+  left: 37px;
+  z-index: 3000;
 
-
+}
+.line {
+  fill: none;
+  stroke: white;
+  stroke-width: 6;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.line1 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
+}
+.line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.opened .line1 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+.opened .line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+.opened .line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
 /* OVERLAY SECTION */
 
 
@@ -176,6 +220,7 @@ body {
   margin-right: 15px;
   position: relative;
   top: 5px;
+  visibility: hidden;
 }
 
 
@@ -217,42 +262,6 @@ body {
 
 
 
-/*
-
-#elevator {
-  position: relative;
-  bottom: 0px;
-  right: 30px;
-  width: 30px;
-
-}
-
-.lift-div {
-  height: 1px;
-  width: 90%;
-  background-color: black;
-  margin-bottom: 20px;
-}
-
-#infos {
-  text-align: center;
-  line-height: 2px;
-  padding: 30px;
-  margin-top: 120px;
-
-}
-
-#floors {
-  text-align: left;
-  padding-top: 20px;
-  padding: 70px;
-}
-
-.floorSecond {
-  padding-left: 50px;
-  padding-top: 40px;
-}
-*/
 
 
 
