--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,7 @@ body {
 }
 
 .menu {
+  background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.0);
   border: none;
   cursor: pointer;
@@ -515,12 +516,12 @@ body {
     height: 100vh;
   }
   .overlay-content #floors {
-    padding-left: 45px;
+    padding-left: 20px;
     font-size: 22px;
   }
   .overlay-content #infos {
     font-size: 22px;
-    padding-right: 60px;
+    padding-right: 20px;
     line-height: 1.1;
   }
   .virtual-v {
