--- a/stylesheet.css
+++ b/stylesheet.css
@@ -125,7 +125,7 @@ body {
 .virtual-v {
   border: 0.5px solid white;
   display: inline-block;
-  padding: 3px;
+  padding-top: 5px!important;
   cursor: pointer;
   text-align: left;
   font-family: 'Rajdhani', sans-serif;
