--- a/stylesheet.css
+++ b/stylesheet.css
@@ -268,6 +268,13 @@ body {
   text-decoration: overline;
 }
 
+.title2 {
+  text-align: center;
+  font-size: 20px;
+  padding-bottom: 20px;
+  text-decoration: overline;
+}
+
 /* VIDEO */
 
 #video-bg {
